# moteur-graphique-qemu

./: .gitignore  .rust-analyzer.toml  Cargo.toml  run.sh  run1.sh  run2.sh  run3.sh  xx86_64-unknown-uefi.json
.cargo/: config.toml
esp/EFI/BOOT/: BOOTX64.EFI
src/: main.rs
